clusters/olympus/infrastructure/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: olympus
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.66.0.150
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.mrahman.xyz"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.mrahman.xyz"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-mrahman-xyz-tls
      allowedRoutes:
        namespaces:
          from: All
